--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon",
-    "build": "next build && ts-node --project tsconfig.server.json server/index.ts",
+    "build": "next build && tsc --project tsconfig.server.json",
     "start": "next start",
     "lint": "next lint"
   },
