--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "dev": "nodemon",
     "build": "next build && tsc --project tsconfig.server.json",
-    "start": "PORT=8888 node dist/index.js",
+    "start": "cross-env NODE_ENV=production PORT=8888 node dist/index.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "next": "12.1.0",
     "next-routes": "^1.4.2",
