--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-slick": "^0.28.1",
     "sass": "^1.49.8",
     "scss": "^0.2.4",
+    "sharp": "^0.30.1",
     "slick-carousel": "^1.8.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "ts-node": "^10.5.0",
