--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
+    "@reduxjs/toolkit": "^1.8.2",
+    "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "next": "12.1.0",
